Lesson 4/demoservers-launch-template.yml
Description: >
 Kelvin Isievwore / Udacity

Parameters:
 EnvironmentName:
     Description: An environment name that will be prefixed to resource names
     Type: String

Resources:
  LBSecGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow http to our load balancer
      VpcId:
        Fn::ImportValue:
          !Sub "${EnvironmentName}-VPCID"
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0

  WebServerSecGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow http to our hosts and SSH from local only
      VpcId:
        Fn::ImportValue:
          !Sub "${EnvironmentName}-VPCID"
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 8080
        ToPort: 8080
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
      - IpProtocol: tcp
        FromPort: 0
        ToPort: 65535
        CidrIp: 0.0.0.0/0

  # WebAppLaunchConfig:
  #   Type: AWS::AutoScaling::LaunchConfiguration
  #   Properties:
  #     UserData:
  #       Fn::Base64: !Sub |
  #         #!/bin/bash
  #         apt-get update -y
  #         apt-get install apache2 -y
  #         systemctl start apache2.service
  #         cd /var/www/html
  #         echo "Udacity Demo Web Server Up and Running!" > index.html         
  #     ImageId: ami-00ddb0e5626798373
  #     KeyName: VocareumKey
  #     SecurityGroups:
  #     - Ref: WebServerSecGroup
  #     InstanceType: t3.medium
  #     BlockDeviceMappings:
  #     - DeviceName: "/dev/sdk"
  #       Ebs:
  #         VolumeSize: '10'

  # WebAppGroup:
  #   Type: AWS::AutoScaling::AutoScalingGroup
  #   Properties:
  #     VPCZoneIdentifier:
  #     - Fn::ImportValue: 
  #         !Sub "${EnvironmentName}-PRIV-NETS"
  #     LaunchConfigurationName:
  #       Ref: WebAppLaunchConfig
  #     MinSize: '3'
  #     MaxSize: '5'
      # TargetGroupARNs:
      # - Ref: WebAppTargetGroup

  myWebAppLaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties: 
      LaunchTemplateData:
        UserData:
          Fn::Base64: !Sub |
            #!/bin/bash
            apt-get update -y
            apt-get install apache2 -y
            systemctl start apache2.service
            cd /var/www/html
            echo "Udacity Demo Web Server Up and Running!" > index.html
        ImageId: ami-0c2b8ca1dad447f8a
        KeyName: VocareumKey
        SecurityGroupIds:
          - sg-0c06e98dcf1f34eaa
        InstanceType: t2.micro
        BlockDeviceMappings:
        - DeviceName: "/dev/sdk"
          Ebs:
            VolumeSize: '8'

  WebAppGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      VPCZoneIdentifier:
      - Fn::ImportValue: 
          !Sub "${EnvironmentName}-PRIV-NETS"
      LaunchTemplate:
        LaunchTemplateId: !Ref myWebAppLaunchTemplate
        Version: !Ref myLaunchTemplateVersionNumber
      MinSize: '3'
      MaxSize: '5'
      # TargetGroupARNs:
      # - Ref: WebAppTargetGroup
